# tavern-goblin

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose-dev.yml  docker-compose.yml  tools.py
data/ca-certificates/: README
data/nginx/: tavern-goblin-dev.conf  tavern-goblin.conf
frontend/: .prettierignore  .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/locales/de/: dinner.json  login.json  menu.json  profile.json  translation.json
frontend/public/locales/en/: dinner.json  login.json  menu.json  profile.json  translation.json
frontend/scripts/: gen-api.sh  translation_scanner.py
frontend/src/: i18n.ts  index.css  main.tsx  routeTree.gen.ts  router.tsx
frontend/src/api/: api.tsx  error.tsx
frontend/src/components/: dinner-card.tsx  login.tsx  profile.tsx  table-pagination.tsx
frontend/src/components/base/: alert.tsx  avatar.tsx  badge.tsx  button.tsx  checkbox.tsx  combobox.tsx  description-list.tsx  dialog.tsx  divider.tsx  dropdown.tsx  fieldset.tsx  form.tsx  heading-layout.tsx  heading.tsx  input.tsx  language-select.tsx  link.tsx  listbox.tsx  navbar.tsx  pagination.tsx  progress-bar.tsx  radio.tsx  reorder-list.tsx  select.tsx  sidebar-layout.tsx  sidebar.tsx  stacked-layout.tsx  step-bar.tsx  switch.tsx  tab-layout.tsx  tab-menu.tsx  table.tsx  text.tsx  textarea.tsx  unsaved-changes.tsx  user-info.tsx
frontend/src/context/: account.tsx  error-context.tsx
frontend/src/routes/: __root.tsx  _menu.tsx
frontend/src/routes/_menu/: index.tsx
frontend/src/routes/_menu/dinner/: index.tsx
frontend/src/routes/_menu/profile/: index.tsx
frontend/src/utils/: initials.ts  keyboard-handler.ts  result.ts  state.ts  tabs.ts  validators.ts
frontend/src/views/: error.tsx  menu.tsx
scripts/: generate-new-certs.sh
webserver/: Cargo.toml  Makefile.toml
webserver/migrations/: 0001_initial.toml
webserver/src/: cli.rs  config.rs  global.rs  main.rs
webserver/src/http/: mod.rs  server.rs
webserver/src/http/common/: errors.rs  mod.rs  schemas.rs
webserver/src/http/extractors/: mod.rs  session_user.rs
webserver/src/http/frontend_handler/: mod.rs
webserver/src/http/frontend_handler/auth/: handler.rs  mod.rs  schema.rs
webserver/src/http/frontend_handler/oidc/: handler.rs  mod.rs  schema.rs
webserver/src/http/frontend_handler/users/: handler.rs  mod.rs  schema.rs
webserver/src/http/handler_frontend/: mod.rs
webserver/src/http/handler_frontend/oidc/: handler.rs  schema.rs
webserver/src/http/middlewares/: auth_required.rs  mod.rs
webserver/src/models/: mod.rs
webserver/src/models/accounts/: db.rs  mod.rs
webserver/src/models/session/: impls.rs  mod.rs
webserver/src/models/user/: mod.rs
webserver/src/modules/: oidc.rs
webserver/src/utils/: mod.rs  oidc.rs
