[package]
name = "webserver"
version = "0.1.0"
edition = "2024"
authors = ["myOmikron <git@omikron.dev>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Async
tokio = { version = ">=1.23.1", features = ["full"] }
futures-util = { version = "~0.3" }

# CLI
clap = { version = "~4", features = ["derive"] }

# Datatypes
url = { version = "~2", features = ["serde"] }
time = { version = "~0.3" }

# Error handling
anyhow = { version = "~1" }

# Serialization
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "~1" }

# Tracing
tracing = { version = "~0.1" }
tracing-subscriber = { version = "~0.3", features = ["env-filter", "json"] }
tracing-forest = { version = "~0.2", features = ["ansi", "tokio", "smallvec", "chrono"] }

# Web framework
galvyn = { git = "https://github.com/myOmikron/galvyn.git" , rev = "5a18a610c1fbf4c5227f9b8801cdaf1fb7d009b8" }
tower-http = { version = "~0.6", features = ["trace"] }

# Account authentication
openidconnect = { version = "~4", features = ["accept-rfc3339-timestamps", "timing-resistant-secret-traits"] }
uuid = { version = "~1", features = ["v4"] }
